src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

.header{
  width: 100%;
  height: 7vh;
  background-color:beige;
  position: fixed;
  text-align: center;
  box-shadow: 0px 0px 10px 0px;
}

.header-txt{
  margin: auto;
}


.main-card {
  box-shadow: 1px 1px 10px 1px;
  height: 100%;
  float: right;
  width: 40%;
  padding: 10px;
  margin-top: 5%;
  margin-bottom: 1%;
  margin-right: 8%;
}

.input-fields {
  margin: auto;
  width: 50%;
  margin-top: 5%;
}

.display {
  margin: auto;
  width: auto;
  margin-top: 5%;
}

.totals-card{
  box-shadow: 1px 1px 10px 1px;
  display: fixed;
  float: left;
  position: fixed;
  width: 40%;
  margin-left: 8%;
  height: 30vh;
  margin-top: 5%;
}

.display-card{
  box-shadow: 1px 1px 10px 1px;
  float:left;
  width: 40%;
  position: fixed;
  margin-top: 21%;
  margin-left: 8%;
}

